test/files/neg/macro-invalidsig-ctx-badtype.check
Macros_Test_2.scala:2: error: macro implementation has wrong shape:
 required: (c: scala.reflect.makro.Context): c.Expr[Any]
 found   : (c: scala.reflect.api.Universe): Nothing
type mismatch for parameter c: scala.reflect.makro.Context does not conform to scala.reflect.api.Universe
  def foo = macro Impls.foo
                        ^
one error found
